@@ -4,6 +4,13 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/08/29
+	* Mobs will now always chase players using hard-path seeks. [Skotlex]
+	* monster_ai&1 now only signals whether mobs should update their target
+	  cell while chasing more frequently (rather than being state-driven like
+	  Aegis) [Skotlex]
+	* Changed the defaults of view_range_rate and chase_range_rate to 120 to
+	  aproximate better Aegis's view ranges (which are square areas and not
+	  circles) [Skotlex]
 	* Applied Mpeg's work on GS [Toms]
 	  ( http://gpegon.free.fr/ea/gunslinger_08-29-06_mpeg.txt )
 	* Fixed a syntax error in @showmobs [Toms]
